--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "eslint-reporter",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "HTML Report for ESLint",
-	"main": "index.js",
+	"main": "./bin/eslint-reporter.js",
 	"engine": "node >= 0.12.0",
 	"scripts": {
 		"start": "react-scripts start"
