--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-reporter",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "HTML Report for ESLint",
 	"main": "./bin/eslint-reporter.js",
 	"engine": "node >= 0.12.0",
@@ -15,19 +15,19 @@
 		"url": "https://github.com/saqqdy/eslint-reporter"
 	},
 	"dependencies": {
-		"handlebars": "^4.3.1"
+		"colors": "^1.4.0",
+		"commander": "5.0.0",
+		"handlebars": "^4.3.1",
+		"shelljs": "^0.8.3"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
 		"chai": "4.2.0",
-		"colors": "^1.4.0",
-		"commander": "^5.0.0",
 		"coveralls": "3.0.3",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"istanbul": "0.4.5",
-		"prettier": "^2.0.2",
-		"shelljs": "^0.8.3"
+		"prettier": "^2.0.2"
 	},
 	"keywords": [
 		"eslint",
