--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-reporter",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"description": "HTML Report for ESLint",
 	"main": "./bin/eslint-reporter.js",
 	"engine": "node >= 0.12.0",
@@ -18,6 +18,7 @@
 		"colors": "^1.4.0",
 		"commander": "5.0.0",
 		"handlebars": "^4.3.1",
+		"ora": "^4.0.5",
 		"shelljs": "^0.8.3"
 	},
 	"devDependencies": {
