--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-reporter",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"description": "HTML Report for ESLint",
 	"main": "./bin/eslint-reporter.js",
 	"engine": "node >= 0.12.0",
@@ -16,19 +16,19 @@
 	},
 	"dependencies": {
 		"colors": "^1.4.0",
-		"commander": "5.0.0",
+		"commander": "6.0.0",
 		"handlebars": "^4.3.1",
 		"ora": "^4.0.5",
-		"shelljs": "^0.8.3"
+		"shelljs": "0.8.4"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
 		"chai": "4.2.0",
-		"coveralls": "3.0.3",
-		"eslint": "^6.8.0",
-		"eslint-plugin-prettier": "^3.1.2",
+		"coveralls": "3.1.0",
+		"eslint": "7.6.0",
+		"eslint-plugin-prettier": "3.1.4",
 		"istanbul": "0.4.5",
-		"prettier": "^2.0.2"
+		"prettier": "2.0.5"
 	},
 	"keywords": [
 		"eslint",
