--- a/.npmignore
+++ b/.npmignore
@@ -1,38 +1,6 @@
-.DS_Store
-.git
 node_modules
-/dist
-yarn.lock
-/.pnp
-.pnp.js
-
-/tests/e2e/reports/
-selenium-debug.log
-
-# local env files
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# testing
-/coverage
-
-# production
-/build
-/src
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+/docs
+script
+*.bak
+*.bak.js
+*_bak
