--- a/package.json
+++ b/package.json
@@ -1,44 +1,78 @@
 {
-	"name": "eslint-reporter",
-	"version": "1.0.5",
-	"description": "HTML Report for ESLint",
-	"main": "./bin/eslint-reporter.js",
-	"engine": "node >= 0.12.0",
-	"scripts": {
-		"start": "react-scripts start"
-	},
-	"bin": {
-		"eslint-reporter": "./bin/eslint-reporter.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/saqqdy/eslint-reporter"
-	},
-	"dependencies": {
-		"colors": "^1.4.0",
-		"commander": "6.0.0",
-		"handlebars": "^4.3.1",
-		"ora": "^4.0.5",
-		"shelljs": "0.8.4"
-	},
-	"devDependencies": {
-		"babel-eslint": "^10.1.0",
-		"chai": "4.2.0",
-		"coveralls": "3.1.0",
-		"eslint": "7.6.0",
-		"eslint-plugin-prettier": "3.1.4",
-		"istanbul": "0.4.5",
-		"prettier": "2.0.5"
-	},
-	"keywords": [
-		"eslint",
-		"report",
-		"html"
-	],
-	"author": "saqqdy.com",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/saqqdy/eslint-reporter/issues"
-	},
-	"homepage": "https://github.com/saqqdy/eslint-reporter#readme"
+    "name": "eslint-reporter",
+    "version": "1.1.0",
+    "description": "HTML Report for ESLint",
+    "main": "lib/eslint-reporter.js",
+    "engine": "node >= 0.12.0",
+    "scripts": {
+        "build": "rimraf lib es && node --max-old-space-size=8192 node_modules/.bin/rollup -c",
+        "build:types": "run-s build-temp-types roll-types",
+        "build-temp-types": "tsc --emitDeclarationOnly --outDir temp/ -p bin/",
+        "patch-types": "node script/patchTypes",
+        "roll-types": "api-extractor run && rimraf temp",
+        "dev": "rollup -c -w",
+        "dist": "run-s eslint prettier build",
+        "docs": "rimraf docs && typedoc",
+        "eslint": "eslint --fix --ext .ts,.js",
+        "prettier": "prettier --write \"**/*.{js,ts,json,md}\"",
+        "prettier:docs": "prettier --write \"**/*.md\""
+    },
+    "bin": {
+        "eslint-reporter": "lib/eslint-reporter.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/saqqdy/eslint-reporter"
+    },
+    "dependencies": {
+        "colors": "^1.4.0",
+        "commander": "8.2.0",
+        "handlebars": "^4.3.1",
+        "ora": "^5.4.1",
+        "shelljs": "0.8.4"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.15.6",
+        "@babel/preset-typescript": "^7.15.0",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^20.0.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^13.0.4",
+        "@saqqdy/prettier-config": "^1.0.4",
+        "@types/node": "14.17.5",
+        "@types/shelljs": "^0.8.9",
+        "@typescript-eslint/eslint-plugin": "^4.31.1",
+        "@typescript-eslint/parser": "^4.31.1",
+        "babel-eslint": "^10.1.0",
+        "chai": "4.3.4",
+        "coveralls": "3.1.1",
+        "esbuild": "^0.12.28",
+        "eslint": "^7.32.0",
+        "eslint-config-sets": "^1.5.1",
+        "eslint-plugin-prettier": "4.0.0",
+        "istanbul": "0.4.5",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.4.0",
+        "rimraf": "^3.0.2",
+        "rollup": "^2.56.3",
+        "rollup-plugin-esbuild": "^4.5.0",
+        "rollup-plugin-preserve-shebang": "^1.0.1",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-visualizer": "^5.5.2",
+        "typedoc": "^0.22.3",
+        "typedoc-plugin-markdown": "^3.10.4",
+        "typescript": "^4.4.3"
+    },
+    "keywords": [
+        "eslint",
+        "report",
+        "html"
+    ],
+    "author": "saqqdy.com",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/saqqdy/eslint-reporter/issues"
+    },
+    "homepage": "https://github.com/saqqdy/eslint-reporter#readme"
 }
